--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name" translatable="false">Bolis</string>
+    <string name="app_name">Bolis</string>
+    <string name="name">Name</string>
 </resources>
