--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Bolis</string>
     <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="create_new_account">CREATE NEW ACCOUNT</string>
+    <string name="forgot_password">FORGOT YOUR PASSWORD?</string>
+    <string name="login">Log In</string>
 </resources>
