--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,4 +12,5 @@
     <string name="chat">Chat</string>
     <string name="profile">Profile</string>
     <string name="welcome">Welcome</string>
+    <string name="badges">badges</string>
 </resources>
