--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="chat">Chat</string>
     <string name="profile">Profile</string>
     <string name="welcome">Welcome</string>
+    <string name="badges">badges</string>
 </resources>
