Add news feature; implement News API integration, create NewsPage and NewsDetailsPage for displaying news articles, and add UI components for news items.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="chat">Chat</string>
     <string name="profile">Profile</string>
     <string name="welcome">Welcome</string>
-    <string name="badges">badges</string>
+    <string name="badges">Badges</string>
 </resources>
